# navie-rs

./: Cargo.toml  pyproject.toml  test.md  viz.py
src/: error.rs  io.rs  json_io.rs  main.rs  numerical.rs  poisson.rs  solver.rs
src/boundary/: bc2d.rs  mod.rs
src/domain/: grid2d.rs  mod.rs
src/numerical/: derive.rs  interpolate.rs  mod.rs
src/solver/: simple.rs
