[package]
name = "navie-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33.2"
once_cell = "1.21.3"
rsparse = "1.2.1"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
approx = "0.5.1"
tempfile = "3.19.0"